k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trifid
  annotations:
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: lod-opentransportdata-swiss.zazukoians.org
    traefik.ingress.kubernetes.io/redirect-regex: "^https://(.*)"
    traefik.ingress.kubernetes.io/redirect-replacement: "http://$1"
spec:
  tls:
  - secretName: lod-opentransportdata-swiss-cert
    hosts:
    - lod.opentransportdata.swiss
  rules:
  - host: lod.opentransportdata.swiss
    http:
      paths:
      - path: /
        backend:
          serviceName: trifid
          servicePort: 80
